GB3-652: Fixed `data-download-order.effects` by using `try-catch` instead of `catchError` because the later breaks the effect pipe without `switchMap`.

--- a/src/app/map/components/map-tools/data-download-status-queue/data-download-status-queue.component.scss
+++ b/src/app/map/components/map-tools/data-download-status-queue/data-download-status-queue.component.scss
@@ -76,14 +76,11 @@
           @include mixins.single-line-text();
           font-size: small;
           margin-bottom: 0;
+          margin-right: auto;
 
           &--error {
             color: functions.get-color-from-palette(ktzh-variables.$zh-warn);
           }
-        }
-
-        .data-download-status-queue__content__status-job__status__link {
-          @include mixins.single-line-text();
         }
       }
     }
